# CS744_DECS_project_git_implementation

./: Makefile  README.md  meson.build  mount_fs.sh  myfs  unmount_fs.sh
include/: file_metadata.h  metadata_manager.h  version_info.h
src/:  metadata_manager.c  Makefile  file_metadata.c  file_metadata.h  main.c  metadata_manager.c  metadata_manager.h  mount_fs.sh  unmount_fs.sh  version_info.c  version_info.h  version_manager.c  version_manager.h
